image overflow in post content fixed

--- a/contents/styles/style.css
+++ b/contents/styles/style.css
@@ -307,6 +307,14 @@ body {
 	word-wrap: break-word;
 }
 
+
+
+.post-content img {
+    max-width:90%;
+    max-height:80%;
+}
+    
+
 #blog-container {
 	width: 80%;
 	word-wrap: break-word;
